[gd_scene load_steps=2 format=2]

[ext_resource path="res://http.gd" type="Script" id=1]

[node name="HttpRequestGet" type="Node2D"]
script = ExtResource( 1 )

[node name="HTTPRequestGet" type="HTTPRequest" parent="."]

[connection signal="request_completed" from="HTTPRequestGet" to="." method="_on_HTTPRequest_request_completed"]
